--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link href="jquery-mobile/jquery.mobile-1.0.min.css" rel="stylesheet" type="text/css"/>
 <script src="jquery-mobile/jquery-1.6.4.min.js" type="text/javascript"></script>
 <script src="jquery-mobile/jquery.mobile-1.0.min.js" type="text/javascript"></script>
-<script src="cordova.js" type="text/javascript"></script>
+<!--<script src="cordova.js" type="text/javascript"></script>-->
 <script>
 $(document).ready(function() {
 	$("#guardar").click(function(e) {
@@ -31,7 +31,28 @@ $(document).ready(function() {
 	<div data-role="content">	
 		<ul data-role="listview">
 			<li><a href="#nueva_rendicion">Nueva Rendición</a></li>
-            <li><a href="#lista_rendiciones">Lista Rendiciones</a></li>
+            <li>
+            	<table border="1">
+                  <tr>
+                    <td>Rendición</td>
+                    <td>Fecha</td>
+                    <td>Saldo anterior</td>
+                    <td>Saldo actual</td>
+                    <td>Saldo combustible</td>
+                    <td>Acciones</td>
+                  </tr>
+                  <tr>
+                    <td>Rendición 15-06</td>
+                    <td>15-06-2013</td>
+                    <td>-$16.642</td>
+                    <td>-$37.962</td>
+                    <td>$166.524</td>
+                    <td>
+                    	<a href="#nueva_rendicion"><img align="right" src="excel.gif" width="22" height="22"></a>
+                    </td>
+                  </tr>
+                </table>
+            </li>
 		</ul>		
 	</div>
 	<div data-role="footer">
