--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link href="jquery-mobile/jquery.mobile-1.0.min.css" rel="stylesheet" type="text/css"/>
 <script src="jquery-mobile/jquery-1.6.4.min.js" type="text/javascript"></script>
 <script src="jquery-mobile/jquery.mobile-1.0.min.js" type="text/javascript"></script>
-<!--<script src="cordova.js" type="text/javascript"></script>-->
+<script src="cordova.js" type="text/javascript"></script>
 <script>
 $(document).ready(function() {
 	$("#guardar").click(function(e) {
