--- a/index.html
+++ b/index.html
@@ -7,8 +7,19 @@
 <script src="jquery-mobile/jquery-1.6.4.min.js" type="text/javascript"></script>
 <script src="jquery-mobile/jquery.mobile-1.0.min.js" type="text/javascript"></script>
 <script src="cordova.js" type="text/javascript"></script>
+
+<link rel="stylesheet" href="jquery-mobile/jquery.ui.datepicker.mobile.css" /> 
+<script src="jquery-mobile/jQuery.ui.datepicker.js"></script>
+<script src="jquery-mobile/jquery.ui.datepicker.mobile.js"></script>
+
 <script>
+//reset type=date inputs to text
+$( document ).bind( "mobileinit", function(){
+	$.mobile.page.prototype.options.degradeInputs.date = true;
+});	
+
 $(document).ready(function() {
+	//$.mobile.changePage("#nueva_rendicion");
 	$("#guardar").click(function(e) {
 		e.preventDefault();
 		// Un mensaje de estado
@@ -130,8 +141,8 @@ function onFail(message) {
 	</div>
 	<div data-role="content">
 	  <div data-role="fieldcontain">
-	    <label for="fecha">Fecha:</label>
-	    <input type="text" name="fecha" id="fecha" value=""/>
+	    <label for="fecha2">Fecha:</label>
+		<input type="date" name="fecha2" id="fecha2" value=""  />	
 	    <label for="descripcion">Descripción:</label>
 	    <input type="text" name="descripcion" id="descripcion" value=""/>      
 	    <label for="foto">Foto:</label>
