--- a/index.html
+++ b/index.html
@@ -7,20 +7,21 @@
 <script src="jquery-mobile/jquery-1.6.4.min.js" type="text/javascript"></script>
 <script src="jquery-mobile/jquery.mobile-1.0.min.js" type="text/javascript"></script>
 <script src="cordova.js" type="text/javascript"></script>
-
+<!--
 <link rel="stylesheet" href="jquery-mobile/jquery.ui.datepicker.mobile.css" /> 
 <script src="jquery-mobile/jQuery.ui.datepicker.js"></script>
 <script src="jquery-mobile/jquery.ui.datepicker.mobile.js"></script>
-
+-->
 <script>
 
 $(document).ready(function() {
-	$("#fecha2").focusin(function(e) {
+/*	$("#date").focusin(function(e) {
 		//reset type=date inputs to text
-		$( document ).bind( "mobileinit", function(){
+		$("#date").bind( "mobileinit", function(){
 			$.mobile.page.prototype.options.degradeInputs.date = true;
 		});	        
     });
+*/	
 	//$.mobile.changePage("#nueva_rendicion");
 	$("#guardar").click(function(e) {
 		e.preventDefault();
@@ -143,8 +144,8 @@ function onFail(message) {
 	</div>
 	<div data-role="content">
 	  <div data-role="fieldcontain">
-	    <label for="fecha2">Fecha:</label>
-		<input type="date" name="fecha2" id="fecha2" value=""  />	
+	    <label for="fecha">Fecha:</label>
+		<input type="date" name="fecha" id="fecha" value=""  />	
 	    <label for="descripcion">Descripción:</label>
 	    <input type="text" name="descripcion" id="descripcion" value=""/>      
 	    <label for="foto">Foto:</label>
