--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <div data-role="page" id="nueva_rendicion">
 	<div data-role="header">
-		<h1>Nueva Rendición</h1>
+		<h1><div align="left"><a href="#page">Inicio</a></div>Nueva Rendición</h1>
 	</div>
 	<div data-role="content">
 	  <div data-role="fieldcontain">
@@ -39,6 +39,7 @@
 	    <input type="text" name="monto_asignado" id="monto_asignado" value=""/>      
 	    <label for="combustible_asignado">Combustible asignado:</label>
 	    <input type="text" name="combustible_asignado" id="combustible_asignado" value=""/>      
+	    <input type="file" name="foto" id="foto" />      
       </div>
 
 	  <input type="button" data-role="button" id="guardar" value="Guardar">
