--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 	    <input type="text" name="monto_asignado" id="monto_asignado" value=""/>      
 	    <label for="combustible_asignado">Combustible asignado:</label>
 	    <input type="text" name="combustible_asignado" id="combustible_asignado" value=""/>      
-	    <input type="file" name="foto" id="foto" />      
+	    <input type="file" name="foto" id="foto" />
+        
+        <input type="button" data-role="button" id="sacafoto" value="Tomar foto" onclick="capturePhotoEdit();"/>      
       </div>
 
 	  <input type="button" data-role="button" id="guardar" value="Guardar">
