--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <div data-role="page" id="nueva_rendicion">
 	<div data-role="header">
-		<h1><div align="left"><a href="#page">Inicio</a></div>Nueva Rendición</h1>
+		<h1>Nueva Rendición</h1>
 	</div>
 	<div data-role="content">
 	  <div data-role="fieldcontain">
