--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 	    <label for="fecha">Fecha:</label>
 		<input type="date" name="fecha" id="fecha" value=""  />	
 	    <label for="saldo_anterior">Saldo anterior:</label>
-	    <input type="text" name="saldo_anterior" id="saldo_anterior" value=""/>      
+	    <input type="number" name="saldo_anterior" id="saldo_anterior" value=""/>      
 	    <label for="monto_asignado">Monto asignado:</label>
-	    <input type="text" name="monto_asignado" id="monto_asignado" value=""/>      
+	    <input type="number" name="monto_asignado" id="monto_asignado" value=""/>      
 	    <label for="combustible_asignado">Combustible asignado:</label>
-	    <input type="text" name="combustible_asignado" id="combustible_asignado" value=""/>      
+	    <input type="number" name="combustible_asignado" id="combustible_asignado" value=""/>      
       </div>
 
 	  <input type="button" data-role="button" id="guardar" value="Guardar">
