--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 	</div>
 	<div data-role="content">
 	  <div data-role="fieldcontain">
-	    <label for="fecha">Fecha:</label>
-		<input type="date" name="fecha" id="fecha" value=""  />	
+	    <label for="fecha_rendicion">Fecha:</label>
+		<input type="date" name="fecha_rendicion" id="fecha_rendicion" value=""  />	
 	    <label for="saldo_anterior">Saldo anterior:</label>
 	    <input type="number" name="saldo_anterior" id="saldo_anterior" value=""/>      
 	    <label for="monto_asignado">Monto asignado:</label>
