--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Aplic. Web de jQuery Mobile</title>
+<title>Rendiciones Raxtek</title>
 <link href="jquery-mobile/jquery.mobile-1.0.min.css" rel="stylesheet" type="text/css"/>
 <script src="jquery-mobile/jquery-1.6.4.min.js" type="text/javascript"></script>
 <script src="jquery-mobile/jquery.mobile-1.0.min.js" type="text/javascript"></script>
@@ -19,6 +19,7 @@
 		<ul data-role="listview">
 			<li><a href="#nueva_rendicion">Nueva Rendición</a></li>
 		</ul>		
+		<p id="lista_rendiciones"></p>
 	</div>
 	<div data-role="footer">
 		<h4>Pie de página</h4>
