--- a/index.html
+++ b/index.html
@@ -20,6 +20,47 @@
 			<li><a href="#nueva_rendicion">Nueva Rendición</a></li>
 		</ul>		
 		<p id="lista_rendiciones"></p>
+		<div class="ui-grid-d">
+		  <div class="ui-block-a"><a href="#nada">Bloque  1,1</a></div>
+		  <div class="ui-block-b">Bloque  1,2</div>
+		  <div class="ui-block-c">Bloque  1,3</div>
+		  <div class="ui-block-d">Bloque  1,4</div>
+		  <div class="ui-block-e">Bloque  1,5</div>
+	  	</div>
+		<div class="ui-grid-d">
+		  <div class="ui-block-a"><a href="#nada">Bloque  1,1</a></div>
+		  <div class="ui-block-b">Bloque  1,2</div>
+		  <div class="ui-block-c">Bloque  1,3</div>
+		  <div class="ui-block-d">Bloque  1,4</div>
+		  <div class="ui-block-e">Bloque  1,5</div>
+	  	</div>
+              <div data-role="collapsible-set">
+        <div data-role="collapsible">
+          <h3>Encabezado</h3>
+          <p>Contenido</p>
+        </div>
+        <div data-role="collapsible" data-collapsed="true">
+          <h3>Encabezado</h3>
+          <p>Contenido</p>
+        </div>
+        <div data-role="collapsible" data-collapsed="true">
+          <h3>Encabezado</h3>
+          <p>Contenido</p>
+        </div>
+        <div data-role="collapsible" data-collapsed="true">
+          <h3>Encabezado</h3>
+          <p>Contenido</p>
+        </div>
+        <div data-role="collapsible" data-collapsed="true">
+          <h3>Encabezado</h3>
+          <p>Contenido</p>
+        </div>
+        <div data-role="collapsible" data-collapsed="true">
+          <h3>Encabezado</h3>
+          <p>Contenido</p>
+        </div>
+      </div>
+
 	</div>
 	<div data-role="footer">
 		<h4>Pie de página</h4>
@@ -44,7 +85,7 @@
 		<input type="submit" data-role="button" id="guardar" value="Guardar">
       </form>
       </div>    
-      <p id="resultBlock"></p>
+      <p id="resultBlock"></p>      
     </div>
 	<div data-role="footer">
 		<h4>Pie de página</h4>
