--- a/index.html
+++ b/index.html
@@ -18,49 +18,14 @@
 	<div data-role="content">	
 		<ul data-role="listview">
 			<li><a href="#nueva_rendicion">Nueva Rendición</a></li>
-		</ul>		
-		<p id="lista_rendiciones"></p>
-		<div class="ui-grid-d">
-		  <div class="ui-block-a"><a href="#nada">Bloque  1,1</a></div>
-		  <div class="ui-block-b">Bloque  1,2</div>
-		  <div class="ui-block-c">Bloque  1,3</div>
-		  <div class="ui-block-d">Bloque  1,4</div>
-		  <div class="ui-block-e">Bloque  1,5</div>
-	  	</div>
-		<div class="ui-grid-d">
-		  <div class="ui-block-a"><a href="#nada">Bloque  1,1</a></div>
-		  <div class="ui-block-b">Bloque  1,2</div>
-		  <div class="ui-block-c">Bloque  1,3</div>
-		  <div class="ui-block-d">Bloque  1,4</div>
-		  <div class="ui-block-e">Bloque  1,5</div>
-	  	</div>
-              <div data-role="collapsible-set">
-        <div data-role="collapsible">
-          <h3>Encabezado</h3>
-          <p>Contenido</p>
-        </div>
-        <div data-role="collapsible" data-collapsed="true">
-          <h3>Encabezado</h3>
-          <p>Contenido</p>
-        </div>
-        <div data-role="collapsible" data-collapsed="true">
-          <h3>Encabezado</h3>
-          <p>Contenido</p>
-        </div>
-        <div data-role="collapsible" data-collapsed="true">
-          <h3>Encabezado</h3>
-          <p>Contenido</p>
-        </div>
-        <div data-role="collapsible" data-collapsed="true">
-          <h3>Encabezado</h3>
-          <p>Contenido</p>
-        </div>
-        <div data-role="collapsible" data-collapsed="true">
-          <h3>Encabezado</h3>
-          <p>Contenido</p>
-        </div>
-      </div>
-
+		</ul>
+        <br />		
+       	<div data-role="collapsible-set" id="lista_rendiciones">
+            <div data-role="collapsible" data-collapsed="true">
+              <h3>Encabezado</h3>
+              <p>Contenido</p>
+            </div>
+		</div>
 	</div>
 	<div data-role="footer">
 		<h4>Pie de página</h4>
