--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
 			<li><a href="#nueva_rendicion">Nueva Rendición</a></li>
 		</ul>
         <br />		
-       	<div data-role="collapsible-set" id="lista_rendiciones">
-            <div data-role="collapsible" data-collapsed="true">
-              <h3>Encabezado</h3>
-              <p>Contenido</p>
-            </div>
-		</div>
+       	<table id="lista_rendiciones" width="100%">
+			<tr>
+				<th>Rendici&oacute;n</th>
+				<th>Saldo</th>
+				<th>Saldo combustible</th>
+			</tr>
+		</table>
 	</div>
 	<div data-role="footer">
 		<h4>Pie de página</h4>
