--- a/index.html
+++ b/index.html
@@ -21,11 +21,18 @@
 		</ul>
         <br />		
        	<table id="lista_rendiciones" width="100%">
-			<tr>
+			<tr align="left">
 				<th>Rendici&oacute;n</th>
 				<th>Saldo</th>
 				<th>Saldo combustible</th>
 			</tr>
+            <!--
+			<tr align="left">
+				<td><a href="#items?rendicion=1">Rendici&oacute;n 25-06-2013</a></td>
+				<td>$200.000</th>
+				<td>$1.500.000</td>
+			</tr>
+            -->
 		</table>
 	</div>
 	<div data-role="footer">
@@ -58,7 +65,7 @@
 	</div>
 </div>
 
-<div data-role="page" id="nuevo_item">
+<div data-role="page" id="items">
 	<div data-role="header">
 		<h1>Nuevo item</h1>
 	</div>
