--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<th>Saldo combustible</th>
 			</tr>
 			<tr align="left">
-				<td><a href="#items?rendicion=1">Rendici&oacute;n 25-06-2013</a></td>
+				<td><a href="lositems.html?rendicion=1">Rendici&oacute;n 25-06-2013</a></td>
 				<td>$200.000</th>
 				<td>$1.500.000</td>
 			</tr>
@@ -63,7 +63,7 @@
 	</div>
 </div>
 
-<div data-role="page" id="items">
+<div data-role="page" id="itemspage">
 	<div data-role="header">
 		<h1>Nuevo item</h1>
 	</div>
