--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 				<th>Saldo combustible</th>
 			</tr>
 			<tr align="left">
-				<td><a href="lositems.html?rendicion=1">Rendici&oacute;n 25-06-2013</a></td>
+				<!--<td><a href="lositems.html?rendicion=1">Rendici&oacute;n 25-06-2013</a></td>-->
+				<td><a href="#itemspage?rendicion=1">Rendici&oacute;n 25-06-2013</a></td>
 				<td>$200.000</th>
 				<td>$1.500.000</td>
 			</tr>
