--- a/lositems.html
+++ b/lositems.html
@@ -8,7 +8,7 @@
 <script src="jquery-mobile/jquery.mobile-1.0.min.js" type="text/javascript"></script>
 <script>
 $(document).ready(function() {
-	alert("cargue rules");
+	alert("nada");
 });
 </script>
 
