--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       </div>
 	</div>
 	<div data-role="footer">
-		<h4>Pie de página</h4>
+		<h4><a href="#page">Pie de página</a></h4>
 	</div>
 </div>
 
