--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
           </select>
           <label for="monto">Monto:</label>
           <input type="number" name="monto" id="monto" value="" required />
-          <button data-role="button" id="boleta_factura" name="boleta_factura" onclick="capturePhoto();" value="Boleta/Factura" >
-          <input type="submit" data-role="button" id="guardar" value="Guardar">
+          <a href="#" data-role="button" onclick="capturePhoto();">Boleta/Factura</a>
+		  <input type="submit" data-role="button" id="guardar" value="Guardar">
         </form>
       </div>
 	</div>
