--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <link href="jquery-mobile/jquery.mobile-1.0.min.css" rel="stylesheet" type="text/css"/>
 <script src="jquery-mobile/jquery-1.6.4.min.js" type="text/javascript"></script>
 <script src="jquery-mobile/jquery.mobile-1.0.min.js" type="text/javascript"></script>
-<script src="cordova.js" type="text/javascript"></script>
+<!--<script src="cordova.js" type="text/javascript"></script>-->
+<script src="phonegap.js" type="text/javascript"></script>
 <script src="mijs.js" type="text/javascript"></script>
 </head> 
 <body> 
@@ -34,14 +35,11 @@
 			</tr>
 		</table>
 	</div>
-	<div data-role="footer">
-		<h4>Pie de página</h4>
-	</div>
 </div>
 
 <div data-role="page" id="nueva_rendicion">
 	<div data-role="header">
-		<h1>Nueva Rendición</h1>
+		<h1><a href="#page" style="color:#FFF;"> << Inicio</a> - Nueva Rendición</h1>
 	</div>
 	<div data-role="content">
 	  <div data-role="fieldcontain">
@@ -59,28 +57,22 @@
       </div>    
       <p id="resultBlock"></p>      
     </div>
-	<div data-role="footer">
-		<h4>Pie de página</h4>
-	</div>
 </div>
 
 <div data-role="page" id="itemspage">
 	<div data-role="header">
-		<h1>Items</h1>
+		<h1><a href="#page" style="color:#FFF;"> << Inicio</a> - Items</h1>
 	</div>
 	<div data-role="content">
       <ul data-role="listview">
           <li><a href="#nuevo_item">Nuevo Item</a></li>
       </ul>
 	</div>
-	<div data-role="footer">
-		<h4><a href="#page">Pie de página</a></h4>
-	</div>
 </div>
 
 <div data-role="page" id="nuevo_item">
 	<div data-role="header">
-		<h1>Nuevo Item</h1>
+		<h1><a href="#itemspage" style="color:#FFF;"> << Items</a> - Nuevo Item</h1>
 	</div>
 	<div data-role="content">
       <div data-role="fieldcontain">
@@ -107,9 +99,6 @@
 		  <input type="submit" data-role="button" id="guardar" value="Guardar">
         </form>
       </div>
-	</div>
-	<div data-role="footer">
-		<h4><a href="#page">Pie de página</a></h4>
 	</div>
 </div>
 
