--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
           <label for="monto">Monto:</label>
           <input type="number" name="monto" id="monto" value="" required />
           <a href="#" data-role="button" onclick="capturePhoto();">Boleta/Factura</a>
+          <img style="display:none;width:60px;height:60px;" id="smallImage" src="" />
 		  <input type="submit" data-role="button" id="guardar" value="Guardar">
         </form>
       </div>
