--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 		  <input type="submit" data-role="button" id="guardar" value="Guardar">
         </form>
       </div>
+      <p id="resultBlock2"></p>
 	</div>
 </div>
 
