--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<li><a href="#nueva_rendicion">Nueva Rendición</a></li>
 		</ul>
         <br />		
-       	<table id="lista_rendiciones" width="100%">
+       	<table id="lista_rendiciones" width="100%" style="font-size:9px;" >
 		</table>
 	</div>
 </div>
@@ -56,6 +56,9 @@
       <ul data-role="listview">
           <li><a href="#nuevo_item">Nuevo Item</a></li>
       </ul>
+        <br />		
+       	<table id="lista_items" width="100%">
+		</table>
 	</div>
 </div>
 
