--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <li><a href="#nuevo_item">Nuevo Item</a></li>
       </ul>
         <br />		
-       	<table id="lista_items" width="100%">
+       	<table id="lista_items" width="100%" style="font-size:9px">
 		</table>
 	</div>
 </div>
