--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 	    <input type="number" name="saldo_anterior" id="saldo_anterior" value="" requited />      
 	    <label for="monto_asignado">Monto asignado:</label>
 	    <input type="number" name="monto_asignado" id="monto_asignado" value="" required />      
+	    <label for="saldo_anterior_combustible">Saldo anterior combustible:</label>
+	    <input type="number" name="saldo_anterior_combustible" id="saldo_anterior_combustible" value="" requited />      
 	    <label for="combustible_asignado">Combustible asignado:</label>
 	    <input type="number" name="combustible_asignado" id="combustible_asignado" value="" required />      
 		<input type="submit" data-role="button" id="guardar" value="Guardar">
