--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <head>
 <meta charset="utf-8">
 <title>Rendiciones Raxtek</title>
+<!--
+<link href="jquery-mobile/jquery.mobile-1.3.1.css" rel="stylesheet" type="text/css"/>
+<script src="jquery-mobile/jquery-1.9.1.min.js" type="text/javascript"></script>
+<script src="jquery-mobile/jquery.mobile-1.3.1.js" type="text/javascript"></script>
+-->
 <link href="jquery-mobile/jquery.mobile-1.0.min.css" rel="stylesheet" type="text/css"/>
 <script src="jquery-mobile/jquery-1.6.4.min.js" type="text/javascript"></script>
 <script src="jquery-mobile/jquery.mobile-1.0.min.js" type="text/javascript"></script>
-<!--<script src="cordova.js" type="text/javascript"></script>-->
+
 <script src="phonegap.js" type="text/javascript"></script>
 <script src="mijs.js" type="text/javascript"></script>
 </head> 
@@ -16,7 +21,7 @@
 	<div data-role="header">
 		<h1>Raxtel Rendiciones</h1>
 	</div>
-	<div data-role="content">	
+	<div data-role="content">
 		<ul data-role="listview">
 			<li><a href="#nueva_rendicion">Nueva Rendición</a></li>
 		</ul>
@@ -55,9 +60,16 @@
 		<h1><a href="#page" style="color:#FFF;"> << Inicio</a> - Items</h1>
 	</div>
 	<div data-role="content">
-      <ul data-role="listview">
-          <li><a href="#nuevo_item">Nuevo Item</a></li>
-      </ul>
+	    <table width="100%">
+		    <tr>
+    			<td>
+					<a href="#nuevo_item" data-role="button" data-icon="plus">Nuevo Item</a>
+				</td>
+                <td>
+					<a href="#nuevo_item" data-role="button" data-icon="gear">Editar</a>
+				</td>
+			</tr>
+		</table>
         <br />		
        	<table id="lista_items" width="100%" style="font-size:12px">
 		</table>
