--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	    <table width="100%">
 		    <tr>
     			<td>
-					<a href="#nuevo_item" data-role="button" data-icon="plus">Nuevo Item</a>
+					<a href="#nuevo_item" data-role="button" data-icon="plus" onclick="sessionStorage.id_rendicion=''">Nuevo Item</a>
 				</td>
                 <td>
 					<a href="#nuevo_item" data-role="button" data-icon="gear">Editar</a>
