--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
           <input type="text" name="descripcion" id="descripcion" value="" required />      
           <label for="items" class="select">Item:</label>
           <select name="items" id="items">
+            <option value="0">Seleccione una opcion</option>
             <option value="1">Servicios terceros</option>
             <option value="2">Traslados</option>
             <option value="3">Combustible</option>
