--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	</div>
 	<div data-role="content">
 		<ul data-role="listview">
-			<li><a href="#nueva_rendicion">Nueva Rendición</a></li>
+			<li><a href="#nueva_rendicion" onclick="sessionStorage.id_rendicion=''">Nueva Rendición</a></li>
 		</ul>
         <br />		
        	<table id="lista_rendiciones" width="100%">
@@ -63,10 +63,10 @@
 	    <table width="100%">
 		    <tr>
     			<td>
-					<a href="#nuevo_item" data-role="button" data-icon="plus" onclick="sessionStorage.id_rendicion=''">Nuevo Item</a>
+					<a href="#nuevo_item" data-role="button" data-icon="plus" onclick="sessionStorage.id_item=''">Nuevo Item</a>
 				</td>
                 <td>
-					<a href="#nuevo_item" data-role="button" data-icon="gear">Editar</a>
+					<a href="#nueva_rendicion" data-role="button" data-icon="gear">Editar</a>
 				</td>
 			</tr>
 		</table>
