--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <script src="jquery-mobile/jquery-1.6.4.min.js" type="text/javascript"></script>
 <script src="jquery-mobile/jquery.mobile-1.0.min.js" type="text/javascript"></script>
 
-<script src="jquery.number.js" type="text/javascript"></script>
+<!--<script src="jquery.number.js" type="text/javascript"></script>-->
+<script src="accounting.js" type="text/javascript"></script>
 
 <script src="phonegap.js" type="text/javascript"></script>
 <script src="mijs.js" type="text/javascript"></script>
