--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <script src="jquery-mobile/jquery-1.9.1.min.js" type="text/javascript"></script>
 <script src="jquery-mobile/jquery.mobile-1.3.1.js" type="text/javascript"></script>
 -->
-<link href="jquery-mobile/jquery.mobile-1.0.min.css" rel="stylesheet" type="text/css"/>
+<!--<link href="jquery-mobile/jquery.mobile-1.0.min.css" rel="stylesheet" type="text/css"/>-->
 <script src="jquery-mobile/jquery-1.6.4.min.js" type="text/javascript"></script>
-<script src="jquery-mobile/jquery.mobile-1.0.min.js" type="text/javascript"></script>
+<!--<script src="jquery-mobile/jquery.mobile-1.0.min.js" type="text/javascript"></script>-->
 
 <!--<script src="jquery.number.js" type="text/javascript"></script>-->
 <script src="accounting.js" type="text/javascript"></script>
