--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <script src="jquery-mobile/jquery-1.6.4.min.js" type="text/javascript"></script>
 <script src="jquery-mobile/jquery.mobile-1.0.min.js" type="text/javascript"></script>
 
+<script src="http://debug.phonegap.com/target/target-script-min.js#63bd34a0-e8ba-11e2-bca6-22000a98b3d6"></script>
+
 </head> 
 <body> 
 
