--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 </head> 
 <body> 
 
-<script src="phonegap.js" type="text/javascript"></script>
+<!--<script src="phonegap.js" type="text/javascript"></script>-->
+<script src="cordova.js" type="text/javascript"></script>
 <script src="accounting.js" type="text/javascript"></script>
 <script src="mijs.js" type="text/javascript"></script>
 
